tests/fixtures/errors/prop_unpaired.h
/**
 * @nb
 */
class Foo {
public:
    /**
     * @nb
     * @nb_prop_rw name
     */
    int get_name();
};
